--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "node index.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "next": "^13.5.4",
     "react": "^18",
     "react-dom": "^18"
